--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "randomstring",
   "version": "1.0.2",
-  "author": "Elias Klughammer <elias@klughammer.com> (http://www.klughammer.com",
+  "author": "Elias Klughammer <elias@klughammer.com> (http://www.klughammer.com)",
   "description": "A module for generating random strings",
   "homepage": "https://github.com/klughammer/node-randomstring",
   "repository": {
