--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "engines": {
     "node": "*"
   },
+  "dependencies": {
+    "array-uniq": "1.0.2"  
+  },
   "devDependencies": {
     "mocha": "^1.20.1"
   },
