using randombytes package instead of crypto as it helps in elimination of crypto lib inclusion if lib is being used for browser

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "node": "*"
   },
   "dependencies": {
-    "array-uniq": "1.0.2"  
+    "array-uniq": "1.0.2",
+    "randombytes": "2.0.3"
   },
   "devDependencies": {
     "mocha": "^1.20.1"
